<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@color/image_background">

        <ImageView
            android:id="@+id/small_cover"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <ProgressBar
            android:id="@+id/cover_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:text="David Gilmour"
            android:textStyle="bold"
            android:paddingLeft="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/statistics_layout"
            android:layout_below="@+id/name"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:alpha="0.86"
                android:src="@drawable/ic_tag_outline" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                tools:text="psychedelic, progressive, art rock" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistics_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:alpha="0.86"
                android:src="@drawable/music_box_outline" />

            <TextView
                android:id="@+id/statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:text="6 albums, 80 songs" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>