...
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/musicians_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="visible" />
    </android.support.v4.widget.SwipeRefreshLayout>

...
