...
            android:paddingRight="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            tools:text="4 albums, 73 songs" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingEnd="16dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
...
